# naive-crc-analysis

./: .gitmodules  CMakeLists.txt  README.md  RandGenerator.h  main.cpp  revision.h.in
.github/workflows/: cmake.yml
